k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-api-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-api
  template:
    metadata:
      labels:
        app: crypto-api
    spec:
      containers:
      - name: api-container
        image: crypto-api:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
