k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine  # Pas besoin de "Never" ici car K8s peut la télécharger sur internet
        ports:
        - containerPort: 6379
        #ajout du password
        command: ["redis-server", "--requirepass", "$(REDIS_PASS)"]
