k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-api-service
spec:
  type: NodePort
  selector:
    app: crypto-api # Permet de cibler les Pods qui ont cette étiquette
  ports:
  - port: 5000       # Le port exposé à l'intérieur du cluster K8s
    targetPort: 5000 # Le port sur lequel écoute réellement Flask dans le conteneur
    nodePort: 30001  # Le port externe (choisi entre 30000 et 32767) pour ton navigateur
