k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master # C'est ce nom que le Fetcher va "résoudre"
spec:
  selector:
    app: redis # Le service envoie le trafic vers les Pods qui ont ce label
  ports:
    - protocol: TCP
      port: 6379      # Port vu par le Fetcher
      targetPort: 6379 # Port réel sur le Pod Redis
